OSSelot specific changes for ReadmeOSS and spdx2tv
- Do not use Licenref-fossology when converting to an SPDX ID
- Remove Licenseref prefix when generating ReadmeOSS
- Always include the license text

Signed-off-by: Jan Altenberg <jan.altenberg@osadl.org>

--- a/src/spdx/agent/template/spdx2tv-document.twig
+++ b/src/spdx/agent/template/spdx2tv-document.twig
@@ -42,10 +42,13 @@ LicenseListVersion: 3.22
 ## License Information
 ##-------------------------
 
-{% for licenseData in licenseList %}{% if licenseData.licenseObj.spdxId starts with 'LicenseRef-' or licenseData.licenseObj.shortName starts with 'LicenseRef-' ~%}
+{% for licenseData in licenseList %}{% if licenseData.licenseObj.shortName != "No_license_found" %}
 {%- set licId=licenseData.licenseObj.spdxId %}
 {% if licenseData.licenseObj.shortName starts with 'LicenseRef-' %}
   {% set licId=licenseData.licenseObj.shortName %}
+{%- endif ~%}
+{% if not (licId starts with 'LicenseRef-') %}
+  {% set licId="LicenseRef-#{licId}" %}
 {%- endif ~%}
 LicenseID: {{ licId|replace({' ': '-'}) }}
 LicenseName: {{ licenseData.licenseObj.fullName }}
