--- a/src/spdx/agent/template/spdx2-document.xml.twig
+++ b/src/spdx/agent/template/spdx2-document.xml.twig
@@ -25,7 +25,7 @@
   <rdfs:comment>
     This document was created using license information and a generator from Fossology.
   </rdfs:comment>
-  {%- for licenseData in licenseList %}{% if licenseData.licenseObj.spdxId starts with 'LicenseRef-' or licenseData.licenseObj.shortName starts with 'LicenseRef-' ~%}
+  {%- for licenseData in licenseList %}{% if licenseData.licenseObj.shortname != "No_license_found" ~%}
   <spdx:hasExtractedLicensingInfo>
     {%- set licId=licenseData.licenseObj.spdxId %}
     {% if licenseData.licenseObj.shortName starts with 'LicenseRef-' %}
